# zrive-ds

./: .gitignore  metrics.txt  pyproject.toml
src/module_3/: exploration.ipynb
src/module_4/: non_linear_modeling.ipynb  non_linear_modeling.md
src/module_4/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/module_4/catboost_info/learn/: events.out.tfevents
src/module_4/catboost_info/tmp/: cat_feature_index.7c3fd2d7-17a4f97e-2785fa7b-4c4ae1e8.tmp
src/module_5/: module5.ipynb  module5.md
src/module_6/: app.py  basket_model.py  feature_store.py  proff.ipynb  taste.ipynb  user_ids.xlsx
src/module_6/basket_model/: basket_model.py
src/module_6/basket_model/utils/: features.py  loaders.py
src/module_6/handlers/: metrics.py  predict.py  status.py
src/module_6/profiling/: attack.sh  payload.json  report.sh  targets.txt
src/module_6/src/: data_model.py  exceptions.py  metrics.py  routes.py
src/module_6/src/basket_model/utils/: features.py  loaders.py
src/module_6/src/handlers/: metrics.py  predict.py  status.py
tests/module_6/: test_api.py
